// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip renders with action 1`] = `
.c1.c1:hover {
  opacity: 0.64;
}

.c1.c1:active {
  -webkit-transform: translate(0,1px);
  -ms-transform: translate(0,1px);
  transform: translate(0,1px);
}

.c2.c2 {
  background: none;
  border: none;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  cursor: pointer;
  color: #e9eaec;
  vertical-align: middle;
  margin-left: 0.5rem;
}

.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #303641;
  color: #e9eaec;
  border-radius: 0.2rem;
  padding: 0.25rem 0.5rem;
  margin: 0.25rem 0.5rem;
}

<div
  className="c0"
  data-cy="filter-chip"
>
  <small
    title=""
  >
    Weather
  </small>
  <button
    className="c1 c2"
    data-cy="remove-filter"
    onClick={[Function]}
    type="button"
  >
    <span
      aria-label="remove-filter-icon"
      role="img"
    >
      <svg
        height="12px"
        viewBox="0 0 16 16"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          fill="#e9eaec"
          points="13.707,3.707 12.293,2.293 8,6.586 3.707,2.293 2.293,3.707 6.586,8 2.293,12.293 3.707,13.707 8,9.414  12.293,13.707 13.707,12.293 9.414,8"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Chip renders without action 1`] = `
.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #303641;
  color: #e9eaec;
  border-radius: 0.2rem;
  padding: 0.25rem 0.5rem;
  margin: 0.25rem 0.5rem;
}

<div
  className="c0"
  data-cy="filter-chip"
>
  <small
    title=""
  >
    Weather
  </small>
</div>
`;
